[package]
name = "zero_ecs"
version = "0.2.23"
edition = "2021"
description = "Entity Component System (ECS), using only zero-cost abstractions"
repository = "https://github.com/JohanNorberg/zero_ecs"
documentation = "https://github.com/JohanNorberg/zero_ecs#readme"
license = "MIT OR Apache-2.0"
authors = ["Johan Norberg <johan.norberg@jepono.se>"]
keywords = ["ecs", "zero_ecs"]
categories = ["game-development", "data-structures"]
readme = "README.md"

[dependencies]
zero_ecs_macros = { path = "../zero_ecs_macros", version = "0.2.23" }
itertools = "0.12.1"
rayon = "1.9.0"
