[package]
name = "zero_ecs_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero_ecs_macros = { path = "../zero_ecs_macros", version = "0.1.0" }
syn = { version = "2.0.51", features = ["full"] }
quote = "1.0.35"
itertools = "0.12.1"
glob = "0.3.1"
