[package]
name = "zero_ecs_macros"
version = "0.2.18"
edition = "2021"
description = "Procedural macros for Build scripts for: ZeroECS: an Entity Component System (ECS), using only zero-cost abstractions"
repository = "https://github.com/JohanNorberg/zero_ecs"
documentation = "https://github.com/JohanNorberg/zero_ecs#readme"
license = "MIT OR Apache-2.0"
authors = ["Johan Norberg <johan.norberg@jepono.se>"]
keywords = ["ecs", "zero_ecs"]
categories = ["game-development", "data-structures"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.51", features = ["full"] }
quote = "1.0.35"
