[package]
name = "zero_ecs_testbed"
version = "0.2.9"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero_ecs = { path = "../zero_ecs", version = "0.2.9" }

[build-dependencies]
zero_ecs_build = { path = "../zero_ecs_build", version = "0.2.9" }
