[package]
name = "zero_ecs_testbed"
version = "0.2.22"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero_ecs = { path = "../zero_ecs", version = "0.2.22" }

[[bin]]
name = "zero_ecs_testbed"
path = "src/testbed.rs"
